add_executable ( e001_holamundo e001_holamundo.cpp )
add_executable ( e002_typechar  e002_typechar.cpp )
add_executable ( e003_typechar16  e003_typechar16.cpp )
add_executable ( e004_typeint e004_typeint.cpp )
add_executable ( e005_typesignedint e005_typesignedint.cpp )
add_executable ( e006_typeunsignedint e006_typeunsignedint.cpp )
add_executable ( e007_typefloat e007_typefloat.cpp)
add_executable ( e008_typebool e008_typebool.cpp )
add_executable ( e009_operadorArtimetico e009_operadorArtimetico.cpp)
add_executable ( e010_operadoresAritmeticos_2 e010_operadoresAritmeticos_2.cpp )
add_executable ( e011_operadoresLogicos e011_operadoresLogicos.cpp)
add_executable ( e012_operadoresRelacionales e012_operadoresRelacionales.cpp )
add_executable ( e013_promocion_integral e013_promocion_integral.cpp)
add_executable ( e014_promocion_integral_2 e014_promocion_integral_2.cpp)
add_executable ( e015_promocion_integral_3 e015_promocion_integral_3.cpp)
add_executable ( e016_casting e016_casting.cpp)
add_executable ( e017_casting_2 e017_casting_2.cpp)
add_executable ( e018_input_output e018_input_output.cpp)
add_executable ( e019_condiciones e019_condiciones.cpp)