add_executable ( e001_holamundo e001_holamundo.cpp )
add_executable ( e002_typechar  e002_typechar.cpp )
add_executable ( e003_typechar16  e003_typechar16.cpp )
add_executable ( e004_typeint e004_typeint.cpp )
add_executable ( e005_typesignedint e005_typesignedint.cpp )
add_executable ( e006_typeunsignedint e006_typeunsignedint.cpp )
add_executable ( e007_typefloat e007_typefloat.cpp)
add_executable ( e008_typebool e008_typebool.cpp )
add_executable ( e009_operadorArtimetico e009_operadorArtimetico.cpp)
add_executable ( e010_operadoresAritmeticos_2 e010_operadoresAritmeticos_2.cpp )
add_executable ( e011_operadoresLogicos e011_operadoresLogicos.cpp)
add_executable ( e011_2_operadoresLogicos e011_2_operadoresLogicos.cpp)
add_executable ( e012_operadoresRelacionales e012_operadoresRelacionales.cpp )
add_executable ( e013_promocion_integral e013_promocion_integral.cpp)
add_executable ( e014_promocion_integral_2 e014_promocion_integral_2.cpp)
add_executable ( e015_promocion_integral_3 e015_promocion_integral_3.cpp)
add_executable ( e016_casting e016_casting.cpp)
add_executable ( e017_casting_2 e017_casting_2.cpp)
add_executable ( e018_input_output e018_input_output.cpp)
add_executable ( e019_condiciones e019_condiciones.cpp)
add_executable ( hwk_01 hwk_01.cpp)
add_executable ( hwk_02 hwk_02.cpp)
add_executable ( hwk_03 hwk_03.cpp)
add_executable ( hwk_04 hwk_04.cpp)
add_executable ( hwk_05 hwk_05.cpp)
add_executable ( hwk_06 hwk_06.cpp)
add_executable ( hwk_07 hwk_07.cpp)
add_executable ( hwk_08 hwk_08.cpp)
add_executable ( hwk_02_2 hwk_02_2.cpp)
add_executable ( e021_exampleValidacion e021_exampleValidacion.cpp)
add_executable ( e022_exampleValidacion e022_exampleValidacion.cpp)
add_executable ( e023_tabulador e023_tabulador.cpp)
add_executable ( e024_switch-case e024_switch-case.cpp)
add_executable ( e025_switch-case_2 e025_switch-case_2.cpp)
add_executable ( e026_loops_1 e026_loops_1.cpp)
add_executable ( e027_loops_2 e027_loops_2.cpp)
add_executable ( e028_loops_3 e028_loops_3.cpp)
add_executable ( e029_function_raiz e029_function_raiz.cpp)
add_executable ( e030_function_cube e030_function_cube.cpp)
add_executable ( e031_function_compare e031_function_compare.cpp)
add_executable ( e032_function_recursiva e032_function_recursiva.cpp)
add_executable ( e033_function_permutacion e033_function_permutacion.cpp)
add_executable ( e034_func_valor e034_func_valor.cpp)
add_executable ( e035_func_referencia e035_func_referencia.cpp)
add_executable ( e036_func_ref-const e036_func_ref-const.cpp)
add_executable ( e037_var_alcance e037_var_alcance.cpp)
add_executable ( e038_var_almacenamiento e038_var_almacenamiento.cpp)
add_executable ( e040_files e039_file1.cpp e040_file2.cpp)